--- a/test/Android-App/GSoC-Example/bin/AndroidManifest.xml
+++ b/test/Android-App/GSoC-Example/bin/AndroidManifest.xml
@@ -31,7 +31,8 @@
         <service android:name=".MyIntentService" />
         <activity
             android:name="com.example.gsoc_example.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
