--- a/push-notify.cabal
+++ b/push-notify.cabal
@@ -27,33 +27,33 @@ library
                      Network.PushNotify.Apns.Constants,
                      Network.PushNotify.Mpns.Constants
 
-  build-depends:     base ==4.5.*,
-                     yesod ==1.2.*,
-                     text ==0.11.*,
-                     aeson ==0.6.*,
-                     http-conduit ==1.9.*,
-                     unordered-containers ==0.2.*,
-                     http-types ==0.8.*,
-                     data-default ==0.5.*,
-                     conduit ==1.0.*,
-                     attoparsec-conduit ==1.0.*,
-                     containers ==0.4.*,
-                     bytestring ==0.9.*,
-                     transformers ==0.3.*,
-                     monad-control ==0.3.*,
-                     resourcet ==0.4.*,
-                     retry ==0.3.*,
-                     mtl ==2.1.*,
-                     async ==2.0.*,
-                     stm ==2.3.*,
-                     certificate ==1.3.*,
-                     convertible ==1.0.*,
-                     cereal ==0.3.*,
-                     time ==1.4.*,
-                     base16-bytestring ==0.1.*,
-                     cprng-aes ==0.3.*,
-                     network ==2.4.*,
-                     tls ==1.1.*,
-                     tls-extra ==0.6.*,
-                     xml-conduit ==1.1.*
+  build-depends:     base                 >=4.5  && <5
+                   , yesod                >=1.2
+                   , text                 >=0.11
+                   , aeson                >=0.6
+                   , http-conduit         >=1.9
+                   , unordered-containers >=0.2
+                   , http-types           >=0.8
+                   , data-default         >=0.5
+                   , conduit              >=1.0
+                   , attoparsec-conduit   >=1.0
+                   , containers           >=0.4
+                   , bytestring           >=0.9
+                   , transformers         >=0.3
+                   , monad-control        >=0.3
+                   , resourcet            >=0.4
+                   , retry                >=0.3
+                   , mtl                  >=2.1
+                   , async                >=2.0
+                   , stm                  >=2.3
+                   , certificate          >=1.3
+                   , convertible          >=1.0
+                   , cereal               >=0.3
+                   , time                 >=1.4
+                   , base16-bytestring    >=0.1
+                   , cprng-aes            >=0.3
+                   , network              >=2.4
+                   , tls                  >=1.1
+                   , tls-extra            >=0.6
+                   , xml-conduit          >=1.1
 
