--- a/push-notify.cabal
+++ b/push-notify.cabal
@@ -40,11 +40,13 @@ library
                    , cereal               >=0.3
                    , certificate          >=1.3
                    , conduit              >=1.0
+                   , connection           >=0.1
                    , containers           >=0.4
                    , convertible          >=1.0
                    , cprng-aes            >=0.3
                    , data-default         >=0.5
-                   , http-conduit         >=1.9
+                   , http-client          >=0.2
+                   , http-conduit         >=2.0
                    , http-types           >=0.8
                    , monad-control        >=0.3
                    , mtl                  >=2.1
