--- a/push-notify.cabal
+++ b/push-notify.cabal
@@ -39,7 +39,8 @@ library
                    , bytestring           >=0.9
                    , cereal               >=0.3
                    , certificate          >=1.3
-                   , conduit              >=1.0
+                   , conduit              >=1.1
+                   , conduit-extra        >=1.1
                    , connection           >=0.1
                    , containers           >=0.4
                    , convertible          >=1.0
